--- a/comida/templates/base.html
+++ b/comida/templates/base.html
@@ -105,9 +105,9 @@
         {% for m in messages %}
             <script>
                 Swal.fire({
-                    "title": "Felicitaciones",
-                    "text": "{{ m }}",
-                    "icon": "success"
+                    title: "Felicitaciones",
+                    text: "{{ m }}",
+                    icon: "success"
                 })
             </script>
         {% endfor %}
