--- a/comida/templates/home.html
+++ b/comida/templates/home.html
@@ -14,7 +14,7 @@
             <h2>Chok Dog</h2>
             <div class="descripcion">
                 <p>¡Te invitamos a vivir una experiecia única en Chok Dog! <br>
-                Es el lugar ideal para disfrutar, es un ambiente acogedor y amigable, perfecto para pasar un buen rato con amigos y familiares, ven prueba nuestras comidas y comparte tu experiencia con nosotros.</p>
+                Lugar ideal para pasar un buen rato con amigos y familiares, ven a disfrutar de un ambiente acogedor, amigable y prueba nuestras preparaciones. No olvides compartir tu experiencia con nosotros.</p>
             </div>
             <div class="botones">
                 <button class="boton" onclick=location.href="{% url 'iniciar' %}">Iniciar Sesión</button>
