--- a/comida/templates/nosotros.html
+++ b/comida/templates/nosotros.html
@@ -11,7 +11,7 @@
 
             <div class="about-item">
                 <div class="about-overlay">
-                    <img src="{% static 'img/cok_2.jpg' %}" alt="Nuestra cocina" class="about-image">
+                    <img src="{% static 'img/mision.jpg' %}" alt="Nuestra cocina" class="about-image">
                 </div>
                 <div class="about-content">
                     <h2 class="about-title">Nuestra Misión</h2>
@@ -25,7 +25,7 @@
                     <p class="about-description">Ser el restaurante líder en comidas rápidas, bebidas y raspados en El Municipio del Pital, Huila, reconocido por ofrecer experiencias únicas a nuestros clientes a través de sabores innovadores, calidad excepcional y un servicio cálido, contribuyendo al desarrollo gastronómico y turístico de nuestra región.</p>
                 </div>
                 <div class="about-overlay">
-                    <img src="{% static 'img/cok.jpg' %}" alt="Historia del restaurante" class="about-image">
+                    <img src="{% static 'img/vision.jpg' %}" alt="Historia del restaurante" class="about-image">
                 </div>
             </div>
 
