--- a/comida/templates/pagina.html
+++ b/comida/templates/pagina.html
@@ -6,8 +6,10 @@
 <link rel="stylesheet" href="{% static 'pagina.css' %}">
 <header class="hero">
     <div class="hero-content">
-        <h1><span class="resaltado">Bienvenido a</span> Chok Dog</h1>
-        <p>Descubre los mejores platillos y cócteles en un ambiente único.</p>
+        <h1><span class="resaltado">¡Bienvenidos a </span> Chok Dog!</h1>
+        <h2>🌟 Descubre la magia de nuestros sabores 🌟</h2>
+        <p>Ven por una experiencia culinaria diseñada para deleitar tus sentidos. Cada plato es preparado con los ingredientes más frescos y con un toque especial que te hará regresar por más.
+        </p>
     </div>
     <div class="hero-img">
         <img src="{% static 'img/cok_2.jpg' %}" alt="Plato de comida">
@@ -18,22 +20,22 @@
     <h2>Nuestros Platos y Cócteles</h2>
     <div class="menu-grid">
         <div class="menu-item">
-            <img src="{% static 'img/hamburguesa.jpg' %}" alt="Hamburguesa">
+            <img src="{% static 'img/pla1.jpg' %}" alt="Hamburguesa">
             <h3>Hamburguesa Especial</h3>
             <p>Carne jugosa con ingredientes frescos.</p>
         </div>
         <div class="menu-item">
-            <img src="{% static 'img/cocktail.jpg' %}" alt="Cóctel">
+            <img src="{% static 'img/pla3.jpg' %}" alt="Cóctel">
             <h3>Cóctel de la Casa</h3>
             <p>Una combinación perfecta de sabores.</p>
         </div>
         <div class="menu-item">
-            <img src="{% static 'img/pizza.jpg' %}" alt="Pizza">
-            <h3>Pizza Artesanal</h3>
+            <img src="{% static 'img/pla4.jpg' %}" alt="Pizza">
+            <h3>Crema Batida</h3>
             <p>Ingredientes premium y masa crujiente.</p>
         </div>
         <div class="menu-item">
-            <img src="{% static 'img/batido.jpg' %}" alt="Batido">
+            <img src="{% static 'img/pla2.jpg' %}" alt="Batido">
             <h3>Batido Refrescante</h3>
             <p>El equilibrio perfecto entre dulzura y frescura.</p>
         </div>
