--- a/comida/static/home.css
+++ b/comida/static/home.css
@@ -88,7 +88,7 @@
 }
 
 .boton:hover {
-    background-color: #888;
+    background-color: var(--dorado);
     cursor: pointer;
     transform: scale(1.05);
 }
