--- a/comida/static/perfil.css
+++ b/comida/static/perfil.css
@@ -1,40 +1,66 @@
-.profile{
+.profile {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100vh;
+    background: #f2f2f2; /* Fondo oscuro */
 }
 
 .profile-container {
-    max-width: 600px;
-    margin: 50px 0 50px 0;
-    background: #333D41;
+    max-width: 400px;
+    width: 100%;
+    background: var(--blanco);
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 15px;
     color: white;
-   
+    text-align: center;
+    box-shadow: var(--box);
 }
-.input {
-    padding: 10px;
-    margin-top: 5px;
-}
-input label{
-    margin: 10px;
-}
-.input input{
-    border-radius: 5px;
-    border: none;
-    background-color: #333D41;
-    color: rgb(255, 255, 255);
-    margin-left: 10px;
-}
-.name-container {
+
+.profile-header {
     display: flex;
-    gap: 10px;
+    flex-direction: column;
+    align-items: center;
 }
 
-.name-container div {
-    flex: 1;
+.profile-pic {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
+.username {
+    font-size: 18px;
+    color: #D4AF37;
+    margin-top: -5px;
+}
 
+.location {
+    font-size: 14px;
+    color: #848989;
+}
 
+.profile-info {
+    margin-top: 20px;
+    text-align: left;
+}
+
+.input {
+    margin-bottom: 10px;
+}
+
+.input label {
+    font-weight: bold;
+    color: #D4AF37;
+    display: block;
+}
+
+.input p {
+    background: var(--blanco);
+    padding: 8px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #555;
+    color: rgb(0, 0, 0);
+}
