--- a/comida/static/productos.css
+++ b/comida/static/productos.css
@@ -4,6 +4,145 @@
     margin-bottom: 50px;
 }
 
+.food-item {
+    display: inline-block;
+    align-items: center;
+    background: #333D41;
+    padding: 15px;
+    border-radius: 10px;
+    margin: 15px;
+    color: white;
+    width: 250px;
+   
+    /* box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border: solid 2px var(--dorado); */
+}
+
+.food-item img {
+    width: 90%;
+    height: 100px;
+    /* border: solid 2px var(--dorado); */
+    margin-bottom: 10px;
+    
+}
+
+.details p {
+    margin: 5px 0;
+}
+.ingredient-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 10px;
+    text-align: left;
+    margin-bottom: 15px;
+}
+
+.ingredient-grid label {
+    background: #f8f8f8;
+    padding: 8px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    width: 100%;
+}
+
+
+.ingredient-grid input {
+    accent-color: #D4AF37; /* Color dorado para los checkboxes */
+    transform: scale(1.2);
+}
+
+.boton {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.btn-custom {
+    background: #D4AF37;
+    color: black;
+    padding: 8px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.btn-cart {
+    background: #95A5A6;
+    color: black;
+    padding: 8px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+/* ESTILO DEL MODAL */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 400px;
+    position: relative;
+    z-index: 1000;
+}
+
+.modal-content .desc {
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 15px;
+}
+
+.modal-content label {
+    display: block;
+    margin: 10px 0;
+}
+
+.close {
+    position: absolute;
+    right: 15px;
+    top: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+
+@media (max-width: 768px) {
+    .menu-con {
+        padding-top: 50px;
+        
+    }
+    .food-item {
+        width: 180px;
+    }
+    
+}
+
+/* .menu-con {
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 50px;
+}
+
 h1 {
     color: #333;
 }
@@ -53,7 +192,7 @@ h1 {
     transition: all .2s ;
     background-color: var(--dorado);
     cursor: pointer;
-}
+} */
 
 @media (max-width: 768px) {
     .menu-con {
