--- a/comida/static/barra.css
+++ b/comida/static/barra.css
@@ -15,7 +15,7 @@
     --negro-profundo: #1a1a1a;
     --fondo: #0000007b;
     --dorado: #D4AF37;
-    --gris-industrial: #333D41;
+    --gris-industrial: #2d2d2d;
     --negro-carbon: #121212;
     --gris-acero: #95A5A6;
 }
