--- a/comida/templates/base.html
+++ b/comida/templates/base.html
@@ -93,7 +93,7 @@
                     <div class="social-links">
                         <a class="fa" href="https://www.facebook.com/chok.dog"><i      class='bx bxl-facebook-circle' ></i></a>
                         <a class="ig" href="https://www.instagram.com/chok.dog?utm_source=qr&igsh=c2ZjdnRnNmFyMjYy"><i class='bx bxl-instagram' ></i></a>
-                        <a class="wp"href="https://wa.me/3014429452?text=comun%C3%ADcate%20con%20nosotros"><i class='bx bxl-whatsapp' ></i></a>
+                        <a class="wp"href="https://wa.link/x8yhmt"><i class='bx bxl-whatsapp' ></i></a>
                     </div>
                 </div>
             </div>
