--- a/comida/templates/nosotros.html
+++ b/comida/templates/nosotros.html
@@ -38,13 +38,13 @@
                         En Chok Dog hemos diseñado nuestro local para que sea un lugar para disfrutar más allá de solo comer; Un ambiente donde cada detalle ha sido pensado para ofrecer Un espacio acogedor, elegante, para crear la atmósfera perfecta y disfrutar de una experiencia gastronómica única.<p>
                 </div>
                 <div class="about-overlay">
-                    <img src="{% static 'img/cok_3.jpg' %}" alt="Nuestro local" class="about-image">
+                    <img src="{% static 'img/local.jpg' %}" alt="Nuestro local" class="about-image">
                 </div>
             </div>
 
             <div class="about-item">
                 <div class="about-overlay">
-                    <img src="{% static 'img/cok_4.jpg' %}" alt="Nuestro equipo" class="about-image">
+                    <img src="{% static 'img/local.jpg' %}" alt="Nuestro equipo" class="about-image">
                 </div>
                 <div class="about-content">
                     <h2 class="about-title">Equipo de Trabajo</h2>
@@ -58,7 +58,7 @@
                     <p class="about-description">Te invitamos a ser parte de nuestra historia y disfrutar de una experiencia gastronomica excepcional, nos ubicamos en la calle 6 #9-10 en el Municipio del pital-Huila, te esperamos</p>
                 </div>
                 <div class="about-overlay">
-                    <img src="{% static 'img/cok_3.jpg' %}" alt="Nuestra puerta" class="about-image">
+                    <img src="{% static 'img/puerta.jpg' %}" alt="Nuestra puerta" class="about-image">
                 </div>
             </div>
 
