--- a/comida/templates/productos.html
+++ b/comida/templates/productos.html
@@ -102,6 +102,7 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal('modalBurger')">&times;</span>
         <h2>Personaliza tu Hamburguesa</h2>
+        <p>Pan, 120gr de carne artesanal, lechuga, tomate, queso tajado y tocineta </p>
         <p class="desc">Agrega ingredientes extra y disfruta de una hamburguesa única.</p>
         <div class="ingredient-grid">
             <label><input type="checkbox" name="ingrediente"> Queso</label>
@@ -121,7 +122,7 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal('modalSoda')">&times;</span>
         <h2>Personaliza tu Hot-Dog</h2>
-        <p class="desc">Elige los ingredientes extra para hacer tu hot-dog único.</p>
+        <p class="desc">Elige el sabor de tu preferencia.</p>
         
         <div class="ingredient-grid">
             <label><input type="checkbox" name="ingrediente"> Maracuya</label>
@@ -140,7 +141,6 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal('modalMichelada')">&times;</span>
         <h2>Elige con que quieres tu Michelada</h2>
-        <p class="desc">Elige los ingredientes extra para hacer tu hot-dog único.</p>
         
         <div class="ingredient-grid">
             <label><input type="checkbox" name="ingrediente"> Con Cerveza</label>
@@ -155,7 +155,7 @@
     <div class="modal-content">
         <span class="close" onclick="closeModal('modalCrema')">&times;</span>
         <h2>Elige el sabor de tu preferencia</h2>
-        <p class="desc">Elige los ingredientes extra para hacer tu hot-dog único.</p>
+        <p class="desc">Elige el sabor para tu crema de fruta.</p>
         
         <div class="ingredient-grid">
             <label><input type="checkbox" name="ingrediente"> Mora</label>
