--- a/comida/static/productos.css
+++ b/comida/static/productos.css
@@ -1,33 +1,40 @@
 .menu-con {
     text-align: center;
     padding: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
+    max-width: 1200px;
+
 }
 
 .food-item {
     display: inline-block;
     align-items: center;
-    background: #333D41;
+    
     padding: 15px;
     border-radius: 10px;
     margin: 15px;
-    color: white;
+    color: rgb(0, 0, 0);
     width: 250px;
-   
-    /* box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    border: solid 2px var(--dorado); */
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border: solid 2px var(--dorado);
 }
 
 .food-item img {
     width: 90%;
     height: 100px;
-    /* border: solid 2px var(--dorado); */
+    border: solid 2px var(--dorado);
     margin-bottom: 10px;
     
 }
-
+.details{
+    padding: 10px;
+    border: solid 2px var(--dorado);
+    margin-bottom: 10px;
+    text-align: start;
+}
 .details p {
     margin: 5px 0;
+    
 }
 .ingredient-grid {
     display: grid;
@@ -60,6 +67,20 @@
     flex-direction: column;
     gap: 10px;
     margin-top: 10px;
+}
+.boton button{
+    background-color: var(--dorado);
+    color: white;
+    border: solid 1px var(--dorado);
+    padding: 10px;
+    border-radius: 25px;
+    
+
+}
+.boton button:hover{
+    transition: all .2s ;
+    background-color: var(--);
+    cursor: pointer;
 }
 
 .btn-custom {
