--- a/comida/templates/perfil.html
+++ b/comida/templates/perfil.html
@@ -29,7 +29,7 @@
             </div>
             <div class="input">
                 <label>Teléfono:</label>
-                <p>{{ user.phone }}</p>
+                <p>{{ user.phone_number  }}</p>
             </div>
             <div class="input">
                 <label>Dirección:</label>
