--- a/comida/templates/regis.html
+++ b/comida/templates/regis.html
@@ -15,29 +15,23 @@
 
             <div class="name-container">
                 <div>
-                    <label for="first_name">Nombre:</label>
-                    <input type="text" id="first_name" name="first_name" required>
+                    <input type="text" placeholder="Nombre"  id="first_name" name="first_name" required>
                 </div>
                 <div>
-                    <label for="last_name">Apellido:</label>
-                    <input type="text" id="last_name" name="last_name" required>
+                    <input type="text" placeholder="Apellido:" id="last_name" name="last_name" required>
                 </div>
             </div>
 
-            <label for="username">Usuario:</label>
-            <input type="text" id="username" name="username" required>
+            
+            <input type="text" placeholder="Nombre de usuario" id="username" name="username" required>
 
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" placeholder="Correo Electronico"  id="email" name="email" required>
 
-            <label for="phone">Teléfono (opcional):</label>
-            <input type="text" id="phone" name="phone">
+            <input type="text" placeholder="Telefono"  id="phone" name="phone">
 
-            <label for="address">Dirección (opcional):</label>
-            <input type="text" name="address">
+            <input type="text" placeholder="Direrccción"  name="address">
 
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" placeholder="Contraseña"  id="password" name="password" required>
 
             <input type="submit" value="Registrarse">
         </form>
