--- a/comida/templates/base.html
+++ b/comida/templates/base.html
@@ -94,12 +94,15 @@
                         <a class="fa" href="https://www.facebook.com/chok.dog"><i      class='bx bxl-facebook-circle' ></i></a>
                         <a class="ig" href="https://www.instagram.com/chok.dog?utm_source=qr&igsh=c2ZjdnRnNmFyMjYy"><i class='bx bxl-instagram' ></i></a>
                         <a class="wp"href="https://wa.link/x8yhmt"><i class='bx bxl-whatsapp' ></i></a>
+                        <a class="tt" href="https://www.tiktok.com/@chokdogg?is_from_webapp=1&sender_device=pc"><img src="{% static 'img/tik-tok.png' %}" alt=""></a>
                     </div>
                 </div>
             </div>
         </div>
    </footer>
     <script src="{% static 'js/script.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="{% static 'js/reservas.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     {% if messages %}
         {% for m in messages %}
