--- a/comida/templates/nosotros.html
+++ b/comida/templates/nosotros.html
@@ -32,33 +32,33 @@
             
 
             <div class="about-item">
+                <div class="about-overlay">
+                    <img src="{% static 'img/local.jpg' %}" alt="Nuestro local" class="about-image">
+                </div>
                 <div class="about-content">
                     <h2 class="about-title">Nuestro Local</h2>
                     <p class="about-description">
                         En Chok Dog hemos diseñado nuestro local para que sea un lugar para disfrutar más allá de solo comer; Un ambiente donde cada detalle ha sido pensado para ofrecer Un espacio acogedor, elegante, para crear la atmósfera perfecta y disfrutar de una experiencia gastronómica única.<p>
                 </div>
-                <div class="about-overlay">
-                    <img src="{% static 'img/local.jpg' %}" alt="Nuestro local" class="about-image">
-                </div>
             </div>
 
             <div class="about-item">
-                <div class="about-overlay">
-                    <img src="{% static 'img/local.jpg' %}" alt="Nuestro equipo" class="about-image">
-                </div>
                 <div class="about-content">
                     <h2 class="about-title">Equipo de Trabajo</h2>
                     <p class="about-description">Detrás de cada plato en Chok Dog hay un equipo comprometido con la excelencia, apasionado y profesional dedicado a crear experiencias memorables para nuestros clientes en cada visita.</p>
                 </div>
+                <div class="about-overlay">
+                    <img src="{% static 'img/equipo.jpg' %}" alt="Nuestro equipo" class="about-image">
+                </div>
             </div>
 
             <div class="about-item">
+                <div class="about-overlay">
+                    <img src="{% static 'img/puerta.jpg' %}" alt="Nuestra puerta" class="about-image">
+                </div>
                 <div class="about-content">
                     <h2 class="about-title">Nuestra Puerta está abierta</h2>
                     <p class="about-description">Te invitamos a ser parte de nuestra historia y disfrutar de una experiencia gastronomica excepcional, nos ubicamos en la calle 6 #9-10 en el Municipio del pital-Huila, te esperamos</p>
-                </div>
-                <div class="about-overlay">
-                    <img src="{% static 'img/puerta.jpg' %}" alt="Nuestra puerta" class="about-image">
                 </div>
             </div>
 
