--- a/comida/templates/servicios.html
+++ b/comida/templates/servicios.html
@@ -27,7 +27,7 @@
             <h3 class="service-title">Servicio a Domicilio</h3>
             <p class="service-description">Disfruta de nuestros platos en la comodidad de tu hogar. Haz tu pedido y te lo llevamos rápido y caliente.</p>
             <div class="bton">
-                <a href="https://wa.me/1234567890" class="service-button" target="_blank">Pedir por WhatsApp</a>
+                <a href="https://wa.link/x8yhmt" class="service-button" target="_blank">Pedir por WhatsApp</a>
             </div>
         </div>
 
